--- a/style.css
+++ b/style.css
@@ -12,6 +12,7 @@
 body {
   display: flex;
   justify-content: center;
+  align-items: center;
   font-size: 0.9375rem;
   font-family: "Poppins", sans-serif;
   font-weight: 200;
@@ -20,9 +21,10 @@ body {
 }
 
 .main-container {
-  max-width: 20rem;
   display: flex;
   flex-direction: column;
+  justify-content: center;
+  max-width: 20rem;
   align-items: center;
   padding: 3rem 0rem;
   gap: 1rem;
@@ -31,11 +33,13 @@ body {
 h1 {
   font-weight: 200;
   font-size: 1.5rem;
+  text-align: center;
 }
 
-p {
+.summary {
   font-weight: 400;
   color: var(--color-grayish-blue);
+  text-align: center;
 }
 
 .card-stack {
@@ -55,19 +59,19 @@ p {
   box-shadow: 2px 4px 0.4rem hsl(0, 1%, 85%), -2px 4px 0.4rem hsl(0, 1%, 85%);
 }
 
-.cyan-border {
+.supervisor {
   border-top: 4px solid var(--color-cyan);
 }
 
-.red-border {
+.teambuilder {
   border-top: 4px solid var(--color-red);
 }
 
-.orange-border {
+.karma {
   border-top: 4px solid var(--color-orange);
 }
 
-.blue-border {
+.calculator {
   border-top: 4px solid var(--color-blue);
 }
 
@@ -78,4 +82,52 @@ p {
 .role-pictorial-representation {
   align-self: end;
   max-width: 3rem;
+}
+
+@media (min-width: 1048px) {
+  .main-container {
+    max-width: 32rem;
+  }
+
+  h1 {
+    font-size: 2.2rem;
+  }
+
+  .card-stack {
+    display: grid;
+    grid-template-columns: repeat(3, 1fr);
+    gap: 2rem;
+  }
+
+  .supervisor {
+    grid-column: 1; /* Redundant but mentioned for clarity at a glance */
+    grid-row: 1/3;
+    align-self: center;
+  }
+
+  .teambuilder {
+    grid-column: 2;
+    grid-row: 1;
+  }
+
+  .karma {
+    grid-column: 2;
+    grid-row: 2;
+  }
+
+  .calculator {
+    grid-column: 3; /* Redundant but mentioned for clarity at a glance */
+    grid-row: 1/ 3;
+    align-self: center;
+  }
+
+  .role-card {
+    min-width: 20rem;
+    gap: 1rem;
+  }
+
+  .role-pictorial-representation {
+    margin-top: 2rem;
+    max-width: 5rem;
+  }
 }
